--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://turadio2.atwebpages.com/source/bootstrap.min.css">
+    <link rel="stylesheet" href="http://Turadio/turadio/bootstrap.min.css">
     <!-- APlayer CSS -->
 	<link rel="stylesheet" href="http://turadio2.atwebpages.com/source/APlayer.min.css"/>
 
