--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://turadio2.atwebpages.com/source/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <!-- APlayer CSS -->
-	<link rel="stylesheet" href="http://turadio2.atwebpages.com/source/APlayer.min.css"/>
+	<link rel="stylesheet" href="APlayer.min.css"/>
 
     <title>TURADIO Central de Radios</title>
     <style>
